# HEALTHGUARD-AI

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.py  train_model.py
models/: model.pkl  model_metadata.json
templates/: index.html
